# fastapi-clean-mongo

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: routes.py
app/api/endpoints/: user.py
app/core/: config.py  database.py  dependecies.py  dependencies.py  exceptions.py  security.py
app/model/: user.py
app/repository/: base.py  user.py
app/schema/: user.py
tests/: api_test.py  dep_test.py  repo_test.py
